# srpski-istoricar

./: .env.example  .env.production.example  .gitignore  BIBLIOGRAFIJA_README.md  CONFIGURATION.md  DEPLOYMENT.md  FASTAPI_MIGRATION.md  FASTAPI_QUICK_START.md  MIGRATION_SUMMARY.md  PDF_PARSER_README.md  QUICKSTART.md  REACT_MIGRATION_GUIDE.md  README.md  SETUP_CHECKLIST.md  add_pdf_to_faiss.py  add_txt_to_faiss.py  app.py  app.py.broken  auto_populate_bibliography.py  bibliografija.json  bibliografija.json.backup  explore_faiss.py  pdf_parser.py  pdf_parser_dryrun.py  populate_database.py  pyproject.toml  requirements.txt  run_qdrant_standalone.ps1  setup-frontend.ps1  srpski-istoricar.rs.txt  start-backend.ps1  start-frontend.ps1  start.ps1  test_system.py  update_bibliography.py
frontend/: .env.development  .env.example  .env.production  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatContainer.css  ChatContainer.js  DocumentItem.css  DocumentItem.js  DocumentsPanel.css  DocumentsPanel.js  DonationCard.css  DonationCard.js  Header.css  Header.js  InputContainer.css  InputContainer.js  LoadingIndicator.css  LoadingIndicator.js  Message.css  Message.js  PeriodSelection.css  PeriodSelection.js  SvetiSavaShowcase.css  SvetiSavaShowcase.js  WelcomeMessage.css  WelcomeMessage.js
qdrant_data/: meta.json
templates/: index.html
